# batonpass

./: .env  Cargo.toml  README.md  justfile
db/: 00-create-users.sql  01-create-databases.sql  02-alter-grants.sql  03-schema.sql  04-truncate-tables.sql  05-drop-tables.sql  justfile
migrations/: 00-schema.sql
src/: batonpass.rs  main.rs
src/batonpass/: crypt.rs  env.rs  model.rs  org.rs  state.rs  user.rs
src/batonpass/crypt/: cipher.rs  ed25519.rs  kdf.rs  key.rs  nonce.rs  password.rs  sha256digest.rs  signature.rs  version_key_map.rs
src/batonpass/model/: meta.rs  role.rs  status.rs
