[package]
name = "batonpass"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.11"
argon2 = "0.5"
arrayvec = "0.7"
dotenvy = "0.15"
hex = "0.4"
rand = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", features = [ "migrate", "postgres", "runtime-tokio", "tls-native-tls", "uuid" ] }
thiserror = "2.0"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v7"] }

[dev-dependencies]
test-log = "0.2"
